Upgrade to Core 7.0.1 and OLF v2.0.0 (#8)
Upgrade to Core 7.0.1 and OLF v2.0.0 (#8)

* Upgrade to OLF v1.16.0
* Update to powsybl-core 7.0.1 and OLF 2.0.0
* Update README with OLF v2.0.0 and revised benchmark results

---------

Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>